# backend/app/Http/Controllers/OrderController.php
@@ -4,11 +4,14 @@ declare(strict_types=1);
 
 namespace App\Http\Controllers;
 
+use App\Http\Requests\Order\CheckOutRequest;
 use App\Http\Requests\Order\InitOrderRequest;
 use App\Http\Requests\Order\UpdateOrderItemRequest;
 use App\Http\Requests\TakeOrderItemRequest;
 use App\Http\Resources\OrderItemResource;
 use App\Http\Resources\OrderResource;
+use App\Usecases\Order\CheckoutAction;
+use App\Usecases\Order\GetCheckoutAction;
 use App\Usecases\Order\GetOpenOrderByTableNumberAction;
 use App\Usecases\Order\GetOpenOrdersAllAction;
 use App\Usecases\Order\GetOrderByIDAction;
@@ -16,6 +19,7 @@ use App\Usecases\Order\InitOrderAction;
 use App\Usecases\Order\TakeOrderItemAction;
 use App\Usecases\Order\UpdateOrderItemAction;
 use Illuminate\Http\Request;
+use Illuminate\Http\Response;
 
 final class OrderController extends Controller
 {
@@ -74,5 +78,34 @@ final class OrderController extends Controller
 
         $orderItem = $action($tenant, $orderID, $orderItemID, $request->makeOrderItem());
         return new OrderItemResource($orderItem);
+    }
+
+    public function getCheckout(
+        Request $request,
+        GetCheckoutAction $getCheckoutAction
+    ): array {
+        // JWTトークンの中にテナントIDが入っている
+        $tenantID = $request->input('tenant_id');
+        $orderID = $request->input('order_id');
+
+        // ログインユーザーのテナントを取得
+        $tenant = $request->user()->tenant;
+        if ($tenant->id !== $tenantID) {
+            abort(Response::HTTP_FORBIDDEN);
+        }
+
+        $result = $getCheckoutAction($tenant, $orderID);
+        return [
+            'order' => new OrderResource($result['order']),
+            'pendingItems' => $result['pendingItems'],
+        ];
+    }
+
+    public function checkout(CheckOutRequest $request, CheckoutAction $action): OrderResource {
+        $tenant = $request->user()->tenant;
+        $orderID = $request->order_id;
+
+        $order = $action($tenant, $orderID);
+        return new OrderResource($order);
     }
 }
